10-ingress/ingress1_one_path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sails-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
        - path: /backend
          pathType: Prefix
          backend:
            service:
              name: sails-backend
              port:
                number: 1337
