10-ingress/ingress3_annotations.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sails-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "somecookiename"
    nginx.ingress.kubernetes.io/session-cookie-hash: "somesha"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  rules:
    - http:
        paths:
        - path: /backend
          pathType: Prefix
          backend:
            service:
              name: sails-backend
              port:
                number: 1337
